exercicis_inici/1_simple_expression/1a_only_parser/Expr.g4
grammar Expr;

s : e EOF ;

e : SUB e
  | MAX '(' e ',' e ')'
  | e (MUL | DIV) e
  | e (ADD | SUB) e
  | INT
  ;

ADD : '+';
SUB : '-';
MUL : '*';
DIV : '/';
MAX : 'max';

INT : [0-9]+ ;
WS  : [ \t\n]+ -> skip ;
